Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -406,7 +406,7 @@ The below output is for dynamic array randomization.
  
 **Lab link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/dyn_arr/dyn_arr.sv
 
-**log file link**-  
+**log file link**- https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/dyn_arr/dyn_arr_log.log 
 
 ### Queue  
 Queue size will get randomized based on size constraints, and queue elements will get random values.  
@@ -962,7 +962,7 @@ value2 is 1/16
 
 ![solve before output 1](https://user-images.githubusercontent.com/110412468/191438631-cd63ca91-4176-4746-9f20-b741177498fc.png)
 
-        Fig.  
+        Fig-:17 Output of Solve before  
 
 In the above output, the first 32 iterations are used without solve-before and the next 10 iterations are used with solve before.
 
@@ -971,8 +971,8 @@ with: here the constraint solver first randomizes value1 and depending upon the 
 
 so in the first 32 iterations, there was only 1 iteration that got value1 of 1 i.e., **0.03%**, but using solve before value1 got 1 for every alternative iteration means **50%**.
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/solve_before_constraint/solve_before.sv   
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/solve_before_constraint/solve_before_log.log
 
 * **limitations:**
 
@@ -981,7 +981,7 @@ so in the first 32 iterations, there was only 1 iteration that got value1 of 1 i
 
 ![solve before error 1](https://user-images.githubusercontent.com/110412468/191438870-9644da50-c606-4c72-be1b-e28c98d8ad56.png)  
 
-         Fig.
+         
 
 ***
 
@@ -1038,11 +1038,13 @@ From the above gif, can say that if the non-static constraint is turned off/on b
 * **output:**   
 
 ![static constraint output 1 ](https://user-images.githubusercontent.com/110412468/191439132-d4bcfba3-0a7e-4a55-b329-cc0446021778.png)  
+
+             Fig-:18 Output of static constraint output 
       
 Class 1 has two objects 1&2 and class2 has objects 3&4.In class1 used non-static constraint, turned off in object 1 but still, the constraint is on in object 2, but used static constraint in class2, and turned off in object 3 then the constraint has been turned off in object 4 as well.
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/static_constraint/static_constraint.sv
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/static_constraint/static_constraint_log.log
 
 ***
 
@@ -1056,7 +1058,7 @@ In general, there will be three randomize methods:
 
 ![randomization diag 1](https://user-images.githubusercontent.com/110412468/191521969-bf7cd2c8-aa55-4074-a152-f86f390fa311.png)  
 
-      Fig.  
+      fig: 
 
 when a randomize function is called generates random values for variables that were declared as rand/randc by considering the constraints. It is a virtual function that is not overridable and on successful completion of randomization returns 1 else 0.
 
@@ -1093,13 +1095,16 @@ randomize is a virtual function of int type returns 1 on successful completion e
 
 * **output:**  
 
-![randomization output](https://user-images.githubusercontent.com/110412468/191439901-f4af0390-cd63-4a2a-acf1-2d4179c49f4b.png)  
+![randomization output](https://user-images.githubusercontent.com/110412468/191439901-f4af0390-cd63-4a2a-acf1-2d4179c49f4b.png) 
+
+                       Fig-:19 Output of Randomization 
 
 In the above example calling randomize function and storing the value returned by the function in the check variable, if randomization was done taking constraint that value must be 5 and returned 1 based on the check used to print the randomization status message.  
 In the first randomization, there is no conflict so randomization completes successfully and returns 1 so if condition satisfies so prints as randomization successful, In the next call conflict between constraints so randomization doesn't complete so returns 0 so prints as randomization failed.   
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/randomization/randomization.sv
+
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/randomization/randomization_log.log  
 
 ### pre_randomize:
 
@@ -1145,12 +1150,13 @@ This is a void function type that can be overridable called before the actual ra
 
 ![pre randomization output](https://user-images.githubusercontent.com/110412468/191439947-5ee9b134-44a1-4c86-98e6-2eabd835bb3e.png)  
 
-        Fig.  
+        Fig. 20 Output of Pre randomization
 
 In the example, calling pre_randomize function and inside that, if condition satisfies then randomization is stopping in pre_randomize so simulator exits the randomize function without performing the randomization which means rand variables will have previous values. In iterations 1,3 randomization is stopped, so it has previous values but in iterations 2,4 randomization is done.  
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/pre_randomization/pre_randomization.sv 
+ 
+**Github output link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/pre_randomization/pre_randomization_log.log
 
 ### post_randomize:
 
@@ -1193,12 +1199,13 @@ This is also a void function type that can be overridable runs after the randomi
 
 ![post randomization](https://user-images.githubusercontent.com/110412468/191440019-e20a649e-83bf-40b6-b1d8-e75f6216db0a.png)  
 
-        Fig.  
+        Fig.21 output of Post randomization  
 
 In the first iteration of the example calling randomize function, there was no conflict so entering into both pre as well as post after randomizing so printed as randomization is successful but in the second iteration there was a conflict so randomization doesn't completes and comes back and printing as randomization is failed. 
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/post_randomization/post_randomization.sv 
+
+**Github output link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randmoization_methods/post_randomization/post_randomization_log.log
 
  
 ***
@@ -1246,13 +1253,14 @@ In the above example, there were no constraints in class so the value can be any
 
 ![only inline](https://user-images.githubusercontent.com/110412468/191440392-7a05acc1-add4-4f86-801e-92fa9bf8859f.png)  
 
-        Fig.  
+          Fig.22 output of only inline constraint 
 
-As per the inline constraint, the value must be 3 so in both iterations the value is same.
+As per the inline constraint, the value must be 3 so in both iterations the value is the same.
 
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/only_inline/only_inline.sv 
+
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/only_inline/only_inline_log.log  
 
 ### inline constraint along with class constraint  
 
@@ -1281,12 +1289,13 @@ In the above example, the class has one constraint that the value should be grea
  
 ![class and inline output 1](https://user-images.githubusercontent.com/110412468/191521328-12507066-8ba1-4d81-b08c-ab7602dacb92.png)  
 
-         Fig.  
+         Fig.23 output of inline constraint along with class constraint
+  
 
 The initial constraint in class is value >2 so its first iteration value is in the range of 2 to 7, but in the second  iteration giving value must be 7 from inline so the value is 7  
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/class_and_inline/inline_constraint.sv  
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/class_and_inline/inline_constraint_log.log 
 
 
 ### inline conflict with class constraint 
@@ -1318,12 +1327,12 @@ In the above example, the class has a constraint that the value must be 5 and fr
 
 ![conflict with inline](https://user-images.githubusercontent.com/110412468/191441019-b10913ac-5cf4-46fe-837d-754e52241359.png)  
 
-           Fig.  
+           Fig.24 output of inline conflict with class constraint  
 
 Here the constraint solver takes both the constraints into consideration which means there was a conflict between these constraints, in these times randomization will not happen and returns the value 0. so based on the check display message is printed.
 
-**Github code link:**  
-**Github output link:**  
+**Github code link:**  https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/conflict_with_inline/conflict_with_inline.sv 
+**Github output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/inline_constraints/conflict_with_inline/conflict_with_inline_log.log  
 
 **note:**  
 * Not throwing any error from Questa sim 10.6 version simulator
@@ -1331,7 +1340,7 @@ Here the constraint solver takes both the constraints into consideration which m
 
 ![constraint_conflict_error_output](https://user-images.githubusercontent.com/110412468/191441854-7f18230c-ee58-4863-9ec5-9d7308701adb.png)  
 
-             Fig.  
+             Fig. 25 Constraint conflict error  
 
 
 ## 16.Soft Constraint
@@ -1378,13 +1387,15 @@ First Let's take an example for a better understanding of the normal constraints
 In the above example, we took a class name as pack which has an object pkh. the class has a constraint name called addr_a in that constraint is displayed from  0 to 5 value. and inside the module we are using inline constraint it will display from 0 to 10 values but we are using here inline constraint so This Constraint addr_a will be overridden.   
 
 * **Output Snap**   
-![Untitled Diagram drawio (10)](https://user-images.githubusercontent.com/106074838/191422207-28ddc66b-7969-4c12-a921-f2d2f1404339.png)
+![Untitled Diagram drawio (10)](https://user-images.githubusercontent.com/106074838/191422207-28ddc66b-7969-4c12-a921-f2d2f1404339.png)  
 
-In the above example, in the starting 5 iterations normal constraint are execute so it display the value from 5 to 15  and another 5 iterations inline constraint is executed so it display the value from 10 to 0.    
+               fig.26 Output of without soft constraint 
 
-**GitHub lab file link:**
+In the above example, in the starting 5 iterations normal constraints are executed so it displays the value from 5 to 15, and another 5 iterations inline constraint is executed so it displays the value from 10 to 0.    
 
-**GitHub log file link:**
+**GitHub lab file link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_Team_SiliconCrew/constraints/soft_without_conflict
+
+**GitHub log file link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/soft_without_conflict/soft_without_conflict_output.log 
 
 
 Let's take an example for a better understanding of the Soft constraint  
@@ -1421,12 +1432,15 @@ In the above example, we took a class name as pack which has an object pkh. the 
 *  **Output Snap**  
 ![Untitled Diagram drawio (11)](https://user-images.githubusercontent.com/106074838/191422256-df39ba5d-6307-4c77-a79a-08cd4f814c11.png)
 
-In the above example, in the starting 5 iterations normal constraint are executed so it displaying the value zero because in the inside code already conflict was occured. another 5 iterations using soft constraint to executing the code, it display the value from 10 to 0.  
+
+                fig 27. The output of soft with conflict  
+
+In the above example, in the starting 5 iterations, normal constraints are executed so it displays the value zero because in the inside code already conflict occurred. another 5 iterations using soft constraints to execute the code, display the value from 10 to 0.  
 
 
-**GitHub lab file link**
+**GitHub lab file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/soft_with_conflict/soft_with_conflict.sv
 
-**GitHub log file link**
+**GitHub log file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/soft_with_conflict/soft_with_conflict_output.log
 
 ***
 
@@ -1485,11 +1499,13 @@ In the above example, we took a class name as packet which has an object pkt. th
 
 ![Untitled Diagram drawio](https://user-images.githubusercontent.com/106074838/191422774-ad3860d7-13a8-4f60-b226-e9e810679f6b.png)  
 
-In the above output, If constraint mode is 1 it displays 5,10,15 and disabled the constraint using constraint mode is 0 then it displays the any random values.   
+             fig 28. The output of Disable constraint 
+ 
+In the above output, If constraint mode is 1 it displays 5,10,15, and if disabled the constraint using constraint mode is 0 then it displays the any random values.   
 
-**GitHub lab file link**
+**GitHub lab file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/constraint_mode/constraint_mode_code.sv
 
-**GitHub log file link**
+**GitHub log file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/constraint_mode/constraint_mode_code_output.log
 
 ***
 
@@ -1565,11 +1581,14 @@ we were declaring the output 0 to 5 variations, in that 0 to 3, enable randomiza
 **Output snap**   
 ![Untitled Diagram drawio (12)](https://user-images.githubusercontent.com/106074838/191422847-50352caa-f6f3-4e0e-83cd-4c99b4e41031.png)
 
-In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it displays the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable and disable is happening and iteration 4 only randomization disable is happening.     
+                  Fig.29 The output of Disable randomization  
 
-**GitHub lab file link**
+In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it displays the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable 
+ disable are happening and in iteration 4 only randomization disable is happening.     
 
-**GitHub log file link**
+**GitHub lab file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randomization_mode/randomization_mode_code.sv
+
+**GitHub log file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randomization_mode/randomization_mode_code_output.log 
 
 ***
 
@@ -1610,15 +1629,19 @@ In the above example, we were using randcase, if its expressions match it displa
 
 **Output snap**  
 ![Untitled Diagram drawio (13)](https://user-images.githubusercontent.com/106074838/191423224-4f4560e1-ac94-4808-93e2-e595ae21aa44.png)
-  
+ 
+               Fig.30 output of the randcase
+ 
 In the above output, using randcase to generate the 0 to 3 values if any expressions is match it displays outputs.  
 In the above-output snap, the sum of all weights is 7; therefore, the probability of taking the first branch is (1/7) i.e. 0.142.
 The probability of taking the second is (2/7) i.e. 0.285, and the probability of taking the third is (3/7) i.e. 0.428. Each call to the randcase statement will return a random number in the range from 0 to 3.  
   
 
-**GitHub lab file link** 
+**GitHub lab file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randcase/randcase_code.sv 
 
-**GitHub log file link**
+**GitHub log file link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/randcase/randcase_code_output.log 
+
+***
 
 
 
