Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -525,19 +525,19 @@ the output is shown in the below Figure.11
          $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
      endmodule : top
 
-Figure:11,In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.
+Figure:11,In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.  
 At 10ns my DUT give output d = 0 and q = 0, and at that time my test(tb) give output d = 0 and q = x.
 Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give sampled q output to 1, this clock cycle test(tb) only randomize value d = 1 but test(tb) takes sampled previous value q = 0. at 20ns my DUT give output d = 1 and q = 1, and at that time my test give output d = 1 and q = 0.
  
 **Transcript output**
-
+The below Figure.11 shows the output of dflipflop.
 ![case_t1](https://user-images.githubusercontent.com/110448382/191226150-10b956b4-86d8-4c3d-8d58-2c2917396a8a.png)
 
                       Fig.11: Transcript output of case1.
 
 
 **output of d_ff for all clock cycles**
-
+The below figure.12 shows the output waveform of d_flipflop.
 ![case1](https://user-images.githubusercontent.com/110448382/191226229-04947bc6-b25a-4572-946d-28b00d0d0193.png)
 
                          Fig.12: output waveform of case1.
@@ -651,12 +651,12 @@ the output is shown in the below Figure.14
 
 
 **Transcript output**
-
+The below Figure.14 shows the output of d_flipflop
 ![case_t2](https://user-images.githubusercontent.com/110448382/191226341-3fef2183-f734-476f-9969-1f91af00175e.png)
 
                                  Fig.14: Transcript output of case2.
 **output of d_ff for all clock cycles**
-
+The below Figure.15 shows the output waveform of d_flipflop
 ![case2](https://user-images.githubusercontent.com/110448382/191226469-ef5683d9-59d5-44f1-b148-ef6ae061435b.png)
 
                                     Fig.15: output waveform of case2.
@@ -989,12 +989,12 @@ Example1: Fulladder
  
                                      Fig.24: Design Block diagram
 
-Here in the Figure:1, the driver is a class here we declare the virtual interface because inside the class we cannot call the interface directly because interface is static component and class is dynamic component. so this virtual keyword is used to create the instance in the class (it will create the memory space) inside the class. In driver we generates the random stimulus and send to the interface, the DUT signals are declared in the interface. The DUT output is given to the interface. The test block consist of class component i.e (driver.sv)  and the top module consist of all the component such as test, interface and DUT. The instance of all component is created in the Top module/block.
+Here in the Figure:24, the driver is a class here we declare the virtual interface because inside the class we cannot call the interface directly because interface is static component and class is dynamic component. so this virtual keyword is used to create the instance in the class (it will create the virtual interface) inside the class. In driver we generates the random stimulus and send to the interface, the DUT is connected to interface. The DUT output is given to the interface. The test block consist of class component i.e (driver.sv)  and the top module consist of all the component such as test, interface and DUT. The instance of all component is created in the Top module/block.
 
 
 
 **Below figure shows the output of full adder:**  
-Here in the Figure.2 shows the output of full adder where a, b & cin are the input of the full adder, sum and carry are the output of the fulladder
+Here in the Figure.25 shows the output of full adder where a, b & cin are the input of the full adder, sum and carry are the output of the fulladder
 
 ![fulladder2](https://user-images.githubusercontent.com/110412474/189060495-1def6aff-2ef9-4597-83e5-47db63e09aa8.jpg)
 
