Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -203,7 +203,8 @@ We can declare constraints inside and outside of the class. For declaring the co
    
 **Declare the constraint outside the class block**  
 
-![Untitled Diagram drawio (20)](https://user-images.githubusercontent.com/110443268/187884562-6e352c45-615b-4932-93d1-46d00eec0285.png)
+![Untitled Diagram drawio (20)](https://user-images.githubusercontent.com/110443268/187884562-6e352c45-615b-4932-93d1-46d00eec0285.png) 
+
 
 
 If we declare constraint without using the extern keyword, then it will display a warning while compiling.  
@@ -480,7 +481,7 @@ Let's take an example of inside constraint for better understanding.
               endmodule
 
 In the above example, we declared a class, the class name is PQR in which variable var1 is declared. In the constraint block, we are declaring a range by the use of an inside keyword and the range lies between 3 and 9.      
-In this, the random value will be printed between the 3 and 9.
+In this, the random value will be printed between 3 and 9.
 
 
 
@@ -981,6 +982,8 @@ so in the first 32 iterations, there was only 1 iteration that got value1 of 1 i
 
 ![solve before error 1](https://user-images.githubusercontent.com/110412468/191438870-9644da50-c606-4c72-be1b-e28c98d8ad56.png)  
 
+                      Fig.18 : Error of solve before 
+
          
 
 ***
@@ -1031,7 +1034,7 @@ If the constraint is off then the value will have other than 1.
 
 ![static gif](https://user-images.githubusercontent.com/110412468/191321463-be83ae86-2f4b-49f5-9042-3c051330d1ed.gif)  
 
-         gif.  
+         gif 1. static constraint  
 
 From the above gif, can say that if the non-static constraint is turned off/on by using a single object handle then the constraint is applicable to that particular object whereas in static constraint, if the constraint is turned off/on then it is applicable for every object of that class.
 
@@ -1039,7 +1042,7 @@ From the above gif, can say that if the non-static constraint is turned off/on b
 
 ![static constraint output 1 ](https://user-images.githubusercontent.com/110412468/191439132-d4bcfba3-0a7e-4a55-b329-cc0446021778.png)  
 
-             Fig-:18 Output of static constraint output 
+             Fig-:19 Output of static constraint output 
       
 Class 1 has two objects 1&2 and class2 has objects 3&4.In class1 used non-static constraint, turned off in object 1 but still, the constraint is on in object 2, but used static constraint in class2, and turned off in object 3 then the constraint has been turned off in object 4 as well.
 
@@ -1058,7 +1061,7 @@ In general, there will be three randomize methods:
 
 ![randomization diag 1](https://user-images.githubusercontent.com/110412468/191521969-bf7cd2c8-aa55-4074-a152-f86f390fa311.png)  
 
-      fig: 
+        gif 2: Randomization methods  
 
 when a randomize function is called generates random values for variables that were declared as rand/randc by considering the constraints. It is a virtual function that is not overridable and on successful completion of randomization returns 1 else 0.
 
@@ -1097,7 +1100,7 @@ randomize is a virtual function of int type returns 1 on successful completion e
 
 ![randomization output](https://user-images.githubusercontent.com/110412468/191439901-f4af0390-cd63-4a2a-acf1-2d4179c49f4b.png) 
 
-                       Fig-:19 Output of Randomization 
+                       Fig-:20 Output of Randomization 
 
 In the above example calling randomize function and storing the value returned by the function in the check variable, if randomization was done taking constraint that value must be 5 and returned 1 based on the check used to print the randomization status message.  
 In the first randomization, there is no conflict so randomization completes successfully and returns 1 so if condition satisfies so prints as randomization successful, In the next call conflict between constraints so randomization doesn't complete so returns 0 so prints as randomization failed.   
@@ -1150,7 +1153,7 @@ This is a void function type that can be overridable called before the actual ra
 
 ![pre randomization output](https://user-images.githubusercontent.com/110412468/191439947-5ee9b134-44a1-4c86-98e6-2eabd835bb3e.png)  
 
-        Fig. 20 Output of Pre randomization
+        Fig. 21 Output of Pre randomization
 
 In the example, calling pre_randomize function and inside that, if condition satisfies then randomization is stopping in pre_randomize so simulator exits the randomize function without performing the randomization which means rand variables will have previous values. In iterations 1,3 randomization is stopped, so it has previous values but in iterations 2,4 randomization is done.  
 
@@ -1199,7 +1202,7 @@ This is also a void function type that can be overridable runs after the randomi
 
 ![post randomization](https://user-images.githubusercontent.com/110412468/191440019-e20a649e-83bf-40b6-b1d8-e75f6216db0a.png)  
 
-        Fig.21 output of Post randomization  
+        Fig.22 output of Post randomization  
 
 In the first iteration of the example calling randomize function, there was no conflict so entering into both pre as well as post after randomizing so printed as randomization is successful but in the second iteration there was a conflict so randomization doesn't completes and comes back and printing as randomization is failed. 
 
@@ -1253,7 +1256,7 @@ In the above example, there were no constraints in class so the value can be any
 
 ![only inline](https://user-images.githubusercontent.com/110412468/191440392-7a05acc1-add4-4f86-801e-92fa9bf8859f.png)  
 
-          Fig.22 output of only inline constraint 
+          Fig.23 output of only inline constraint 
 
 As per the inline constraint, the value must be 3 so in both iterations the value is the same.
 
@@ -1289,7 +1292,7 @@ In the above example, the class has one constraint that the value should be grea
  
 ![class and inline output 1](https://user-images.githubusercontent.com/110412468/191521328-12507066-8ba1-4d81-b08c-ab7602dacb92.png)  
 
-         Fig.23 output of inline constraint along with class constraint
+         Fig.24 output of inline constraint along with class constraint
   
 
 The initial constraint in class is value >2 so its first iteration value is in the range of 2 to 7, but in the second  iteration giving value must be 7 from inline so the value is 7  
@@ -1327,7 +1330,7 @@ In the above example, the class has a constraint that the value must be 5 and fr
 
 ![conflict with inline](https://user-images.githubusercontent.com/110412468/191441019-b10913ac-5cf4-46fe-837d-754e52241359.png)  
 
-           Fig.24 output of inline conflict with class constraint  
+           Fig.25 output of inline conflict with class constraint  
 
 Here the constraint solver takes both the constraints into consideration which means there was a conflict between these constraints, in these times randomization will not happen and returns the value 0. so based on the check display message is printed.
 
@@ -1340,7 +1343,7 @@ Here the constraint solver takes both the constraints into consideration which m
 
 ![constraint_conflict_error_output](https://user-images.githubusercontent.com/110412468/191441854-7f18230c-ee58-4863-9ec5-9d7308701adb.png)  
 
-             Fig. 25 Constraint conflict error  
+             Fig. 26 Constraint conflict error  
 
 
 ## 16.Soft Constraint
@@ -1389,7 +1392,7 @@ In the above example, we took a class name as pack which has an object pkh. the 
 * **Output Snap**   
 ![Untitled Diagram drawio (10)](https://user-images.githubusercontent.com/106074838/191422207-28ddc66b-7969-4c12-a921-f2d2f1404339.png)  
 
-               fig.26 Output of without soft constraint 
+               fig.27 Output of without soft constraint 
 
 In the above example, in the starting 5 iterations normal constraints are executed so it displays the value from 5 to 15, and another 5 iterations inline constraint is executed so it displays the value from 10 to 0.    
 
@@ -1433,7 +1436,7 @@ In the above example, we took a class name as pack which has an object pkh. the 
 ![Untitled Diagram drawio (11)](https://user-images.githubusercontent.com/106074838/191422256-df39ba5d-6307-4c77-a79a-08cd4f814c11.png)
 
 
-                fig 27. The output of soft with conflict  
+                fig 28. The output of soft with conflict  
 
 In the above example, in the starting 5 iterations, normal constraints are executed so it displays the value zero because in the inside code already conflict occurred. another 5 iterations using soft constraints to execute the code, display the value from 10 to 0.  
 
@@ -1499,7 +1502,7 @@ In the above example, we took a class name as packet which has an object pkt. th
 
 ![Untitled Diagram drawio](https://user-images.githubusercontent.com/106074838/191422774-ad3860d7-13a8-4f60-b226-e9e810679f6b.png)  
 
-             fig 28. The output of Disable constraint 
+             fig 29. The output of Disable constraint 
  
 In the above output, If constraint mode is 1 it displays 5,10,15, and if disabled the constraint using constraint mode is 0 then it displays the any random values.   
 
@@ -1581,7 +1584,7 @@ we were declaring the output 0 to 5 variations, in that 0 to 3, enable randomiza
 **Output snap**   
 ![Untitled Diagram drawio (12)](https://user-images.githubusercontent.com/106074838/191422847-50352caa-f6f3-4e0e-83cd-4c99b4e41031.png)
 
-                  Fig.29 The output of Disable randomization  
+                  Fig.30 The output of Disable randomization  
 
 In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it displays the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable 
  disable are happening and in iteration 4 only randomization disable is happening.     
@@ -1630,7 +1633,7 @@ In the above example, we were using randcase, if its expressions match it displa
 **Output snap**  
 ![Untitled Diagram drawio (13)](https://user-images.githubusercontent.com/106074838/191423224-4f4560e1-ac94-4808-93e2-e595ae21aa44.png)
  
-               Fig.30 output of the randcase
+               Fig.31 output of the randcase
  
 In the above output, using randcase to generate the 0 to 3 values if any expressions is match it displays outputs.  
 In the above-output snap, the sum of all weights is 7; therefore, the probability of taking the first branch is (1/7) i.e. 0.142.
