--- a/15.-Classes-and-oops.md
+++ b/15.-Classes-and-oops.md
@@ -1,11 +1,356 @@
 # Class  
+
 Class is user define data type. Classes contains a set of **"properties"** and **"methods"** in it. Both properties and methods are treated as Members of the class.  
 Properties are nothing but variables and methods are nothing but Functions/Tasks. Class declaration does not occupy any memory. we can define a class in systemverilog inside a module or outside of a module.  
 
-## Class decleration syntax:-  
+**Class decleration syntax**:-  
+
 ```
 class class_name;
    // declare class properties
    // define class method (task and function)
 endclass
 ```
+**Code snippet**:-  
+
+```
+class home;
+
+   bit light;    
+   int fan ;
+   string switch;    
+   
+   task open_electricity();     
+      switch = "ON"
+      $display("switch is %s so electricity is open",switch);
+   endtask  
+endclass 
+```
+From above code snippet class home contains light, fan, switch as properties of the class and open_electricity is a method of the class.  
+
+## Class Instance/ Class handle:-  
+
+As we know the class is a data type, Declaring class type variable is similar to declaring other variables.  
+
+**syntax**:-  
+
+`home h1;`  
+
+In the above syntax home is a class and h1 is the variable of that class. It can hold the handle to an object of class home, but until assigned with class constructor (i.e, new function) it is always null . At this point, the class object does not exist yet.  
+
+**code snippet**:-  
+
+```
+class home;
+
+   bit light;
+   int fan ;
+   string switch;
+
+   task open_electricity();
+      switch = "ON";
+      $display("switch is %s so electricity is open",switch);
+   endtask
+endclass
+
+module tb;
+   home h1;
+   initial begin
+      if (h1==null)
+         $display("object is empty");
+      else
+         $display("object is not empty");
+   end
+endmodule
+```
+
+**output**:-  
+In above code we create a handle h1 for class home and check it is null or not. On the below fig-1 we can see that handle is null. so, we can say that object was not created.
+
+-------------------------------------------------------------------------------------
+
+## class object:-  
+
+An object is an instance of that class. An object is used by first declaring a variable of that class type (that holds an object handle) and then creating an object of that class (using the new() function) and assigning it to the variable.  
+In simple way if we create an object then we assign a memory for that handle of the class.  
+
+**syntax**:-
+
+`h1 = new();`  
+
+The above statement will create an object and assign to handle h1. We can create a object in either 2 step or 1 step also.
+
+There are 2 ways to creat an object:-  
+**1.** Two step process:
+**   step-1:** `home h1;`  
+**   step-2:** `h1 = new();`  
+
+**2.** One step process:
+**step-1:** `home h1 = new();`  
+
+**code snippet**:-  
+
+```
+class home;
+   bit light;
+   int fan ;
+   string switch;
+
+   task open_electricity();
+      switch = "ON";
+      $display("switch is %s so electricity is open",switch);
+   endtask
+endclass
+
+module tb;
+   home h1;
+   
+   initial begin
+      h1=new();
+      if (h1==null)
+         $display("object is empty");
+      else
+         $display("object is not empty");
+   end
+endmodule  
+```
+
+**output**:-  
+On below fig-2 we can see that after create an object the memory to a class handle was created so it display object is not empty.  
+
+-------------------------------------------------------------------------------------
+
+## Class constructor:-  
+
+The new() function is called as class constructor. On calling new() function it allocates the memory and returns the address to the class handle. Constructing an object allocate the space in the memory needed to hold the properties of an object.  
+
+**syntax**:-
+
+`<class_handle_name> = new();`
+
+**Accessing class properties and methods**:-  
+
+With the help of ' . ' we can access class properties and method. Class properties and methods can be accessed by using object names followed by property or method name.
+
+**syntax**:-  
+
+`home_1.light = 1;`  // access the class propertie  
+
+`home_1.open_electricity`  // access the class method  
+
+**code snippet**:-
+```
+class home;
+   bit light;
+   int fan;
+   string switch;
+
+   task open_electricity();
+      switch = "ON";
+      $display("switch is %0s so electricity is open",switch);
+   endtask
+endclass
+
+module check_electricity;
+
+   home h1;
+
+   initial begin
+      h1=new();
+      h1.light=1;
+      h1.fan=1;
+      h1.open_electricity;
+      $display("light is %0d(ON) and fan is also %0d(ON)",h1.light,h1.fan);
+   end
+endmodule
+```
+
+On above code home is a class. They have properties and method. Then here create a handle h1 for class home and the create a object using new() function the access the class properties by h1.light and h1.fan and access the class method by h1.display
+
+**output**:-  
+In below fig-3 we see that access the properties and give the value of light = 1 and fan = 1 it print the light is 1 and fan is also 1.
+
+-------------------------------------------------------------------------------------
+
+**Github lab link**: 
+**Github logfile link**:
+
+## This keyword:-  
+
+The **"this"** keyword resolves the ambiguity of a compiler when class properties and arguments passed to class methods are the same. In simple terms, this keyword is a handle of the current class object. It shall be used only in non-static class methods.  
+
+**syntax**:-
+
+`this.<base_class_member>;`  // It has to be used in derived class  
+
+**code snnipet:-**
+```
+class base_class;
+
+   string fan ="OFF" ; 
+   string switch="OFF"; 
+
+   function void open_electricity();
+      string fan="ON";
+      string switch="ON";
+      this.fan=fan;
+      this.switch=switch;
+      $display("Inside class method :- switch is %0s that's why fan is %0s",switch,fan);
+   endfunction
+
+endclass
+
+module check_electricity;
+   
+   base_class b1;
+   
+   initial begin
+      b1=new();
+      b1.open_electricity;
+      $display("Outside class :- switch is %0s that's why fan is %s",b1.switch,b1.fan);
+   end
+endmodule
+```
+
+From above example we can see that, fan & switch is class properties and argument of function is same and we assign fan to fan but using this keyword it is differentiate.
+
+output :
+In this code we mention the this keyword before the fan and switch then he print the value switch is ON and fan is also ON inside the class as well as outside the class.
+
+this drawio
+
+GitHub lab code
+GitHub lab output
+
+what happned if do not use the this keyword:-
+
+If did not mention the this keyword before assigning the fan to fan or switch to switch then inside the method the it display the overwrite value of properties but outside the class it display the default or given value of properties.
+
+code snippet :
+
+   class base_class;      //define class
+
+     string fan ="OFF" ; //define class properties
+     string switch="OFF"; //
+
+     function void open_electricity();
+      string fan="ON";
+      string switch="ON";
+      fan=fan;
+      switch=switch;
+      $display("Inside class method :- switch is %0s that's why fan is %0s",switch,fan);
+    endfunction
+
+  endclass
+
+  module check_electricity;
+  base_class b1;
+
+  initial begin
+   b1=new();
+   b1.open_electricity;
+   $display("Outside class :- switch is %0s that's why fan is %s",b1.switch,b1.fan);
+  end
+
+ endmodule
+output :
+On the below fig we can see that if we did not mention the this keyword then it display inside method switch is ON that's why fan is ON but outside the class it display the switch is OFF that's why fan is OFF,
+
+without_this drawio
+
+super keyword :-
+The super keyword is used in a child or derived class to refer to class members of parent class. If the method of the parent class is overridden in the child class, then using the ‘super’ keyword parent class method can be accessed from the child class if both class members have the same name for class properties and methods.
+
+syntax :-
+
+ super.<base_class_member>;      // It has to be used in derived class
+** code snippet**
+
+   class base_class;
+    string fan,switch;
+
+    function void display();
+     switch="ON";
+     $write("switch is %s " ,switch);
+    endfunction
+   endclass
+
+   class sub_class extends base_class;
+    string fan="ON";
+    function void display();
+     super.display;
+     $write(" that's why fan is %s  \n" ,fan);
+    endfunction 
+   endclass
+
+   sub_class s1;
+
+  module super_ex;
+  initial begin
+   s1 =new();
+   s1.display;
+  end
+ endmodule
+output :
+On below fig we can see that it display the parent class method and child class method by using the child class handle so it display the switch is ON that's why fan is also ON and it display the single line because here use the $write .
+
+super drawio
+
+extern keyword :-
+An extern method provides a facility for class methods to define them outside of the class body.If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
+An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.
+1-Method definition and declaration should have the same number of argument lists, data types, and argument names.
+2-For the extern function return type should be the same if used
+
+syntax:-
+
+ //method declaration - extern indicates out-of-body declaration
+ 
+ extern function <function_name>;
+ extern task <task_name>;  
+
+ //method implementation outside class body using  scope resolution operator  
+
+ function <class_name>::<function_name>;
+ task <class_name>::<task_name>;
+code snippet :-
+
+   class home;
+    string switch;
+    string fan = "OFF";
+    extern function void display();
+   endclass
+
+   function void home::display();
+    string switch="OFF";
+    $display("The switch is %0s that's why fan is %0s",fan,switch);
+   endfunction
+
+   module extern_example;
+    home h;
+    initial begin
+     h=new();
+     h.display;
+    end
+   endmodule 
+output :
+Here class method is define the outside the class but after access it by using class handle it display the switch is OFF that's why fan is also OFF.
+
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
+
+-------------------------------------------------------------------------------------
