Updated 15. Classes and oops (markdown)

--- a/15.-Classes-and-oops.md
+++ b/15.-Classes-and-oops.md
@@ -195,7 +195,7 @@ class base_class;
       string switch="ON";
       this.fan=fan;
       this.switch=switch;
-      $display("Inside class method :- switch is %0s that's why fan is %0s",switch,fan);
+      $display("Inside class method :- switch is %0s that's why fan is 0s",switch,fan);
    endfunction
 
 endclass
@@ -214,93 +214,108 @@ endmodule
 
 From above example we can see that, fan & switch is class properties and argument of function is same and we assign fan to fan but using this keyword it is differentiate.
 
-output :
+**output**:-
 In this code we mention the this keyword before the fan and switch then he print the value switch is ON and fan is also ON inside the class as well as outside the class.
 
-this drawio
+------------------------------------------------------------------------------------
 
-GitHub lab code
-GitHub lab output
+GitHub lab link:
+GitHub logfile link:
 
-what happned if do not use the this keyword:-
+**what happens if do not use the this keyword in the above code ?**
 
 If did not mention the this keyword before assigning the fan to fan or switch to switch then inside the method the it display the overwrite value of properties but outside the class it display the default or given value of properties.
 
-code snippet :
+**code snippet**:-
+```
+class base_class;
 
-   class base_class;      //define class
+   string fan ="OFF" ; //define class properties
+   string switch="OFF"; //
 
-     string fan ="OFF" ; //define class properties
-     string switch="OFF"; //
-
-     function void open_electricity();
+   function void open_electricity();
       string fan="ON";
       string switch="ON";
       fan=fan;
       switch=switch;
       $display("Inside class method :- switch is %0s that's why fan is %0s",switch,fan);
-    endfunction
+   endfunction
 
-  endclass
+endclass
 
-  module check_electricity;
-  base_class b1;
+module check_electricity;
 
-  initial begin
-   b1=new();
-   b1.open_electricity;
-   $display("Outside class :- switch is %0s that's why fan is %s",b1.switch,b1.fan);
-  end
+   base_class b1;
 
- endmodule
-output :
-On the below fig we can see that if we did not mention the this keyword then it display inside method switch is ON that's why fan is ON but outside the class it display the switch is OFF that's why fan is OFF,
+   initial begin
+      b1=new();
+      b1.open_electricity;
+      $display("Outside class :- switch is %0s that's why fan is %s",b1.switch,b1.fan);
+   end
+endmodule
+```
 
-without_this drawio
+**output**:-
+On the below fig we can see that if we did not mention the this keyword then it display inside method switch is ON that's why fan is ON but outside the class it display the switch is OFF that's why fan is OFF.
 
-super keyword :-
-The super keyword is used in a child or derived class to refer to class members of parent class. If the method of the parent class is overridden in the child class, then using the ‘super’ keyword parent class method can be accessed from the child class if both class members have the same name for class properties and methods.
+-----------------------------------------------------------------------------------
 
-syntax :-
+GitHub lab link:
+GitHub logfile link:
 
- super.<base_class_member>;      // It has to be used in derived class
-** code snippet**
+## super keyword:-  
 
-   class base_class;
-    string fan,switch;
+The **"super"** keyword is used in a child or derived class to refer to class members of parent class. If the method of the parent class is overridden in the child class, then using the **"super"** keyword parent class method can be accessed from the child class if both class members have the same name for class properties and methods.
 
-    function void display();
-     switch="ON";
-     $write("switch is %s " ,switch);
-    endfunction
-   endclass
+**syntax**:-
 
-   class sub_class extends base_class;
-    string fan="ON";
-    function void display();
-     super.display;
-     $write(" that's why fan is %s  \n" ,fan);
-    endfunction 
-   endclass
+`super.<base_class_member>;  // It has to be used in derived class
 
-   sub_class s1;
+**code snippet**:-
+```
+class base_class;
+   string fan,switch;
 
-  module super_ex;
-  initial begin
-   s1 =new();
-   s1.display;
-  end
- endmodule
-output :
+   function void display();
+      switch="ON";
+      $write("switch is %s " ,switch);
+   endfunction
+endclass
+
+class sub_class extends base_class;
+   string fan="ON";
+   
+   function void display();
+      super.display;
+      $write(" that's why fan is %s  \n" ,fan);
+   endfunction 
+endclass
+
+sub_class s1;
+
+module super_ex;
+
+   initial begin
+      s1 =new();
+      s1.display;
+   end
+endmodule
+
+**output**:-  
 On below fig we can see that it display the parent class method and child class method by using the child class handle so it display the switch is ON that's why fan is also ON and it display the single line because here use the $write .
 
-super drawio
+---------------------------------------------------------------------------------
 
-extern keyword :-
-An extern method provides a facility for class methods to define them outside of the class body.If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
+GitHub lab link:
+GitHub logfile link:
+
+## extern keyword:-  
+
+An **"extern"** keyword is used for methods which provides a facility for class methods to define them outside of the class body. If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
 An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.
-1-Method definition and declaration should have the same number of argument lists, data types, and argument names.
-2-For the extern function return type should be the same if used
+**Note**:-
+-Method definition and declaration should have the same number of argument lists, data types, and argument names.
+-For the extern function return type should be the same if used
 
 syntax:-
 
