Updated 15. Classes and oops (markdown)

--- a/15.-Classes-and-oops.md
+++ b/15.-Classes-and-oops.md
@@ -4,15 +4,14 @@ Class is user define data type. Classes contains a set of **"properties"** and *
 Properties are nothing but variables and methods are nothing but Functions/Tasks. Class declaration does not occupy any memory. we can define a class in systemverilog inside a module or outside of a module.  
 
 **Class decleration syntax**:-  
-
 ```
 class class_name;
    // declare class properties
    // define class method (task and function)
 endclass
 ```
-**Code snippet**:-  
 
+**Code snippet**:-  
 ```
 class home;
 
@@ -81,9 +80,9 @@ In simple way if we create an object then we assign a memory for that handle of 
 The above statement will create an object and assign to handle h1. We can create a object in either 2 step or 1 step also.
 
 There are 2 ways to creat an object:-  
-**1.** Two step process:
-**   step-1:** `home h1;`  
-**   step-2:** `h1 = new();`  
+**1.** Two step process:  
+**   -step-1:** `home h1;`  
+**   -step-2:** `h1 = new();`  
 
 **2.** One step process:
 **step-1:** `home h1 = new();`  
